# Hamiltonian-photonic-crystal

./: Documentation.ipynb  Documentation_Fan.ipynb  Documentation_trial.ipynb  Inference ver 2_Pytensor method.ipynb  Inference ver1_randomdraw.ipynb  README.md  Yiting_randomsamples.ipynb  expdata_GM0.05.npy  new_expdata_GM0.05.nc  pyproject.toml  simudata_GM0.05.nc  very_simple.ipynb
Deprecated_Inference_Methods/: Inference ver 2_Pytensor method.ipynb  Inference ver1_randomdraw.ipynb
inference/: Documentation.ipynb  Inference ver 2_Pytensor method.ipynb  Inference ver1_randomdraw.ipynb  Model.py  io.py  new_simudata_GM0.05.nc  prior.py  test_Model.py  test_prior.py
photonic_hamiltonian/: Model.py  cut_expdata_GM0p05.nc  example_data.npy  io.py  io_data.py  simudata_GM0p05.nc  test_Model.py  test_io.py
photonic_hamiltonian/data/: example_data.nc  expdata_chip18_GM0p0625.nc  expdata_singleKspectrum.nc  expdata_singleKspectrum_040_chip2.nc  expdata_singleKspectrum_0425_chip2.nc  expdata_singleKspectrum_045_chip2.nc  expdata_singleKspectrum_0475_chip2.nc  expdata_singleKspectrum_050_chip2.nc  expdata_singleKspectrum_0525_chip2.nc  expdata_singleKspectrum_055.nc  expdata_singleKspectrum_0575.nc  expdata_singleKspectrum_065.nc  expdata_singleKspectrum_0675.nc  expdata_singleKspectrum_070.nc  idata_chip18_GM0p055.nc  idata_chip18_GM0p0625.nc  idata_chip19_GM0p045.nc
photonic_hamiltonian/inference/: Model-Copy1.py  Model-multiple_priors.py  Model-nbasis.py  Model.py  io_data.py
photonic_hamiltonian/test/: test_Model.py  test_io.py
