[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Hamiltonian-photonic-crystal"
version = "1.0"
authors = [
  { name="Fan Du, Thao Dinh, Yiting Huang", email="tdinh@g.harvard.edu" },
]
description = "A Python package to infer Hamiltonian model for photonic crystal"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPLv3",
    "Operating System :: OS Independent",
]
dependencies = [
	"numpy >= 1.24.1"
]

[project.urls]
"Homepage" = "http://github.com/phys201/Hamiltonian-photonic-crystal"
